objects/sumoapp__CalendarLicense__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityDay__c</fullName>
        <label>Availability Per Day (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityMonth__c</fullName>
        <label>Availability Per Month (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityNextMonth__c</fullName>
        <label>Availability Per Next Month (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityNextQuarter__c</fullName>
        <label>Availability Per Next Quarter (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityNextWeekMon__c</fullName>
        <label>Availability Per Next Week Mon (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityNextWeekSun__c</fullName>
        <label>Availability Per Next Week Sun (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityQuarter__c</fullName>
        <label>Availability Per Quarter (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityTomorrow__c</fullName>
        <label>Availability Per Tomorrow (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityTwoWeeksMon__c</fullName>
        <label>Availability Per Two Weeks Mon (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityTwoWeeksSun__c</fullName>
        <label>Availability Per Two Weeks Sun (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityWeekMon__c</fullName>
        <label>Availability Per Week Mon (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityWeekSun__c</fullName>
        <label>Availability Per Week Sun (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__GhostUserContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ghost User Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value can be only a contact with Is Ghost field checked.</errorMessage>
            <filterItems>
                <field>Contact.sumoapp__IsGhost__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SUMO Calendar Licenses</relationshipLabel>
        <relationshipName>SUMOCalendarLicenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsSalesforceCalendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Salesforce Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calendar_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SUMO Calendar License</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Calendar Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>